manifests/ingress-25.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-7336"
    labels:
        app: "diaggarw-7336"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarw4cdb-diaggarw-7336.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-7336"
                servicePort: 8080
